# structured-output-reasoning-lab

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  conditions.yaml  pyproject.toml
.github/workflows/: ci.yml
docs/: analysis_plan.md  experiment_design.md  prompt_canonical.md  results_template.md
src/sor_lab/: __init__.py  cli.py  config.py  datasets.py  evaluation.py  experiment.py  prompts.py  reporting.py  schemas.py  stats.py
src/sor_lab/runners/: __init__.py  _schema_utils.py  azure_sdk.py  base.py  langchain.py  openai_sdk.py
tests/: test_datasets.py  test_evaluation.py  test_experiment_plan.py  test_load_config.py  test_prompts.py  test_reporting.py  test_run_stage.py  test_runner_parse.py  test_schema_utils.py  test_schemas.py  test_stats.py
